# Sqlite3Utils

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  DatabaseHandlerConfig.h.in  Doxyfile  PULL_REQUEST_TEMPLATE.md  README.md  Sqlite3UtilsConfig.h.in  runtest.cmake  sqlite3utils-config-version.cmake.in  sqlite3utils-config.cmake
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: additional-issues-template.md  bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: bugfix_pull_request.md  docs_pull_request.md  feature_pull_request.md  performance_pull_request.md
.github/workflows/: c-cpp.yml  codeql-analysis.yml
docs/: CMakeLists.txt
docs/html/: GMockFaq.html  GMockForDummies.html  Sqlite3UtilsConfig_8h_source.html  annotated.html  annotated_dup.js  classCounter-members.html  classCounter.html  classMyString-members.html  classMyString.html  classOnTheFlyPrimeTable-members.html  classOnTheFlyPrimeTable.html  classPreCalculatedPrimeTable-members.html  classPreCalculatedPrimeTable.html  classPrimeTable-members.html  classPrimeTable.html  classQueue-members.html  classQueue.html  classQueueNode-members.html  classQueueNode.html  classcpp_1_1ast_1_1AstBuilder-members.html  classcpp_1_1ast_1_1AstBuilder.html  classcpp_1_1ast_1_1Class-members.html  classcpp_1_1ast_1_1Class.html  classcpp_1_1ast_1_1Define-members.html  classcpp_1_1ast_1_1Define.html  classcpp_1_1ast_1_1Delete-members.html  classcpp_1_1ast_1_1Delete.html  classcpp_1_1ast_1_1Enum-members.html  classcpp_1_1ast_1_1Enum.html  classcpp_1_1ast_1_1Expr-members.html  classcpp_1_1ast_1_1Expr.html  classcpp_1_1ast_1_1Friend-members.html  classcpp_1_1ast_1_1Friend.html  classcpp_1_1ast_1_1Function-members.html  classcpp_1_1ast_1_1Function.html  classcpp_1_1ast_1_1Goto-members.html  classcpp_1_1ast_1_1Goto.html  classcpp_1_1ast_1_1Include-members.html  classcpp_1_1ast_1_1Include.html  classcpp_1_1ast_1_1Method-members.html  (+636 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.html  classes_15.js  classes_16.html  classes_16.js  classes_17.html  classes_17.js  classes_18.html  (+54 more)
examples/: CMakeLists.txt  closeConnection.cpp  constructor.cpp  createTable.cpp  deleteRecords.cpp  dropTable.cpp  executeQuery.cpp  insertRecord.cpp  reconnectDb.cpp  selectRecords.cpp  selectRecordsStruct.cpp  updateHandler1.cpp  updateHandler2.cpp  updateTable.cpp
include/: CMakeLists.txt  handler.hpp  handlerexceptions.hpp  query.hpp
lib/: CMakeLists.txt  sqlite3query.cpp
scripts/: appveyor-mingw.sh
source/: CMakeLists.txt  Config.cmake.in  DatabaseConfig.h.in  Makefile  main.cpp  test.db
source/include/: database.h  dbquery.h  dbquery.hpp  sqlite3handler.h  sqlite3handler.hpp
source/lib/: database.cpp  dbquery.cpp  sqlite3handler.cpp
source/src/: main.cpp
src/: CMakeLists.txt  Makefile  minimalHandler.cpp  sqlite3handler.cpp  sqlite3query.cpp
style/: uncrustify.cfg
tests/: CMakeLists.txt  CMakeLists.txt.in  Makefile  MyDB.db  tests.cpp
tests/src/: main.cpp  tests.cpp
